# ironic

./: .gitignore  Cargo.toml  README.md  do-bench.sh
back/: Cargo.toml
back/src/: back.rs  fabric.rs  interp.rs  ipc.rs  ir.rs  jit.rs  lib.rs  lut.rs  ppc.rs
benches/: bemem_rw.rs  memories.rs
core/: Cargo.toml
core/benches/: memories.rs
core/src/: bus.rs  cpu.rs  dbg.rs  dev.rs  hlwd.rs  lib.rs  mem.rs  topo.rs
core/src/bus/: decode.rs  dispatch.rs  mmio.rs  prim.rs  task.rs
core/src/cpu/: alu.rs  armv5.rs  bits.rs  coproc.rs  decode.rs  dispatch.rs  excep.rs  exec.rs  interp.rs  lut.rs  mmu.rs  psr.rs  reg.rs
core/src/cpu/armv5/: alu.rs  bits.rs  decode.rs  dispatch.rs  func.rs  interp.rs  mmu.rs  reg.rs
core/src/cpu/armv5/interp/: branch.rs  dataproc.rs  loadstore.rs
core/src/cpu/exec/: arm.rs  thumb.rs
core/src/cpu/exec/arm/: branch.rs  coproc.rs  dataproc.rs  decode.rs  dispatch.rs  loadstore.rs  multiply.rs  status.rs
core/src/cpu/exec/thumb/: bits.rs  branch.rs  dataproc.rs  decode.rs  dispatch.rs  loadstore.rs  misc.rs
core/src/cpu/interp/: alu.rs  branch.rs  coproc.rs  dataproc.rs  loadstore.rs
core/src/cpu/mmu/: prim.rs
core/src/dbg/: ios.rs  symbols.rs
core/src/dev/: aes.rs  ehci.rs  hlwd.rs  nand.rs  ohci.rs  sdhc.rs  sha.rs
core/src/dev/hlwd/: compat.rs  ddr.rs  gpio.rs  ipc.rs  irq.rs  otp.rs
core/src/dev/hlwd/compat/: di.rs  exi.rs  mem.rs
core/src/dev/hlwd/compat/exi/: device.rs
core/src/dev/hlwd/gpio/: seeprom.rs
core/src/dev/nand/: util.rs
core/src/dev/sha/: util.rs
core/src/mem/: back.rs
core/tests/: physmap.rs
pyronic/: es_gettitles_write.py  iris_bootloader.py  kernel_boot.py
pyronic/pyronic/: client.py  ios.py  socket.py
src/: bus.rs  cpu.rs  lib.rs  mem.rs
src/cpu/: armv5.rs
src/mem/: back.rs  (+1 more)
tests/: hostmem.rs  physmap.rs
tui/: Cargo.toml
tui/src/: main.rs
ui/: Cargo.toml
ui/src/: main.rs  support.rs
(+25 files in other folders)
