[package]
name = "ironic-core"
version = "0.1.0"
authors = ["meta <eigenform@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-modes = "0.4.0"
aes = "0.4.0"
csv = "1.1.3"
pretty-hex = "0.2.1"
