[package]
name = "ironic-tui"
version = "0.1.0"
authors = ["meta <hosaka-corp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ironic-core = { path = "../core" }
ironic-backend = { path = "../back" }
