[package]
name = "ironic-ui"
version = "0.1.0"
authors = ["meta <hosaka-corp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ironic-core = { path = "../core" }
clipboard = "0.5"
imgui = "0.5.0"
imgui-glium-renderer = "0.5.0"
imgui-winit-support = "0.5.0"
glium = { version = "0.27", default-features = true }
